--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <title>策略选购平台</title>
   </head>
   <body>
-    <div id="app"></div>
+    <div id="app">
+      <router-view></router-view>
+    </div>
     <!-- built files will be auto injected -->
   </body>
 </html>
